--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,22 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.cards{
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  padding: 16px;
+}
+
+.card {
+  position: relative;
+}
+
+#trash{
+  color: black;
+  text-decoration: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
