--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,1 +1,17 @@
 <h1>Flats#index</h1>
+
+<div class="container">
+  <%= link_to 'Add new', new_flat_path %>
+  <div class="cards">
+    <% @flats.each do |flat|%>
+      <div class="card d-flex flex-column">
+        <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe , flat_path(flat), method: :delete, id: "trash" %>
+        <div> <%= link_to flat.title, flat_path(flat)  %></div>
+       <div> <%= flat.description %> </div>
+       <div> <%= flat.housing_type %> </div>
+       <div> <%= flat.max_ppl %> </div>
+       <div> <%= flat.price_per_night %> </div>
+      </div>
+    <% end %>
+  </div>
+</div>
