--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Flats#edit</h1>
-<p>Find me in app/views/flats/edit.html.erb</p>
+<div class="container">
+  <h2>Edit your Flat</h2>
+  <div class="new_form">
+    <%= simple_form_for(@flat) do |f| %>
+        <%= f.input :title %>
+        <%= f.input :description %>
+        <%= f.input :price_per_night %>
+        <%= f.input :housing_type %>
+        <%= f.input :max_ppl %>
+        <%= f.submit "Flat edited", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
