--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Flats#show</h1>
+<div class="container">
+  <div class="row">Name:
+  <%= @flat.title %></div>
+  <div class="row">A bit more about this place:
+  <%= @flat.description %></div>
+  <div class="row">Price per night:
+  <%= @flat.price_per_night %></div>
+  <div class="row">Type of place:
+  <%= @flat.housing_type %></div>
+  <div class="row">Number of beds:
+  <%= @flat.max_ppl %></div>
+
+  <div class="row"><%= link_to "Back to the research", flats_path %></div>
+  <div class="row"><%= link_to "Edit", edit_flat_path %></div>
+</div>
 
