--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -7,6 +7,7 @@
         <%= f.input :price_per_night %>
         <%= f.input :housing_type %>
         <%= f.input :max_ppl %>
+        <%= f.input :address %>
         <%= f.submit "Flat edited", class: "btn btn-primary" %>
     <% end %>
   </div>
