--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,18 +1,8 @@
 <h1>Flats#index</h1>
 
-
-<div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-></div>
-
-
-<!-- use this code if we don't want the map -->
-<!-- <div class="container">
-  <%= link_to 'Add new', new_flat_path %>
+<div class="container">
+  <div><%= link_to 'Add new', new_flat_path %></div>
+  <div style="text-align: right"><%= link_to 'map', map_path  %></div>
   <div class="cards">
     <% @flats.each do |flat|%>
       <div class="card d-flex flex-column">
@@ -27,4 +17,4 @@
       </div>
     <% end %>
   </div>
-</div> -->
+</div>
