--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -1,2 +1,27 @@
-<h1>Flats#search</h1>
-<p>Find me in app/views/flats/search.html.erb</p>
+
+  <div class="d-flex">
+    <div class="cards">
+      <% @flats.each do |flat|%>
+        <div class="card d-flex flex-column">
+          <% if policy(flat).destroy? %>
+            <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe , flat_path(flat), method: :delete, id: "trash" %>
+          <% end %>
+          <div> <%= link_to flat.title, flat_path(flat)  %></div>
+         <div> <%= flat.description %> </div>
+         <div> <%= flat.housing_type %> </div>
+         <div> <%= flat.max_ppl %> </div>
+         <div> <%= flat.price_per_night %> </div>
+        </div>
+      <% end %>
+    </div>
+
+      <div
+      id="map"
+      style="width: 33%;
+      height: 600px;
+      margin: 10px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
+
+  </div>
