--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -12,9 +12,7 @@
     <%= @flat.max_ppl %></div>
 
     <div class="row"><%= link_to "Back to the research", flats_path %></div>
-    <% if policy(@flat).edit? %>
-    <div class="row"><%= link_to "Edit", edit_flat_path(@flat) %></div>
-    <% end %>
+
   </div>
   <div class="form">
     <h5>Confirm dates & guests for total stay price
@@ -34,9 +32,9 @@
           <label for="guest">Number of guests</label>
           <input type="integer" name="booking[guest]" id="guest" style="display: block;">
         </div>
-      </div>
       <input type="submit" value="Book">
     </form>
   </div>
   </div>
 </div>
+THIS IS WHERE<%= @start_date %>
