landing page carry over date

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,16 +15,16 @@
       <div style="display: flex;">
         <div>
           <label for="checkin">CHECK-IN </label>
-          <input type="date" name="search[checkin]" id="checkin" style="display: block;">
+          <input type="date" name="search[checkin]" id="start_date" style="display: block;">
         </div>
         <div>
           <label for="checkout">CHECK-OUT </label>
-          <input type="date" name="search[checkout]" id="checkout" style="display: block;">
+          <input type="date" name="search[checkout]" id="end_date" style="display: block;">
         </div>
       </div>
 
 
-      <input type="submit" value="Search">
+      <input type="submit" value="Search" id="book-button">
     </form>
 
   </div>
