--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -11,7 +11,8 @@
     <div class="row">Number of beds:
     <%= @flat.max_ppl %></div>
 
-    <div class="row"><%= link_to "Back to the research", flats_path %></div>
+   <div class="row"><%= link_to "Back to the research", session.delete(:return_to) %></div>
+
 
   </div>
   <div class="form">
@@ -32,9 +33,11 @@
           <label for="guest">Number of guests</label>
           <input type="integer" name="booking[guest]" id="guest" style="display: block;">
         </div>
-      <input type="submit" value="Book">
+      <input type="submit" value="Book" id="book-button">
     </form>
   </div>
   </div>
 </div>
-THIS IS WHERE<%= @start_date %>
+
+<!-- <button id="book-button">THIS IS WHERE</button> -->
+
