added photo uploader

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -14,6 +14,7 @@
        <div> <%= flat.housing_type %> </div>
        <div> <%= flat.max_ppl %> </div>
        <div> <%= flat.price_per_night %> </div>
+       <div> <%= cl_image_tag flat.photo %> </div>
       </div>
     <% end %>
   </div>
