--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,10 +15,10 @@
         <ul class="navbar-nav mr-auto">
           <% if user_signed_in? %>
             <li>
-              <%= link_to "Home", profile_path, class: "nav-link menu-links" %>
+              <%= link_to "Home", "/", class: "nav-link menu-links" %>
             </li>
             <li>
-              <%= link_to "My trips", profile_path, class: "nav-link menu-links" %>
+              <%= link_to "My trips", mytrips_path, class: "nav-link menu-links" %>
             </li>
             <li>
               <%= link_to "My flats", "#", class: "nav-link menu-links" %>
@@ -32,7 +32,7 @@
             <li class="nav-item dropdown">
               <%= image_tag "avatar.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <%= link_to "Profile", "#", class: "dropdown-item" %>
+                <%= link_to "Profile", profile_path, class: "dropdown-item" %>
                 <%= link_to "Help", "#", class: "dropdown-item" %>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
               </div>
