show of the booking confirmation

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,2 +1,4 @@
-<%= @booking.start_date %>
-<%= @booking.end_date %>
+<h1>Congratulations for your booking!</h1>
+<h3>Your stay starts on <%= @booking.start_date %> and finishes on <%= @booking.end_date %></h3>
+
+
