--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -8,7 +8,7 @@
          <div> <%= flat.housing_type %> </div>
          <div> <%= flat.max_ppl %> </div>
          <div> <%= flat.price_per_night %> </div>
-          <div class="card-img-top"><%= cl_image_tag flat.photo%></div>
+         <div class="card-img-top"><%= cl_image_tag flat.photo, height: 100, width: 100, crop: :fill %></div>
         </div>
       <% end %>
     </div>
