--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -8,6 +8,8 @@
         <%= f.input :housing_type %>
         <%= f.input :max_ppl %>
         <%= f.input :address %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
         <%= f.submit "Flat edited", class: "btn btn-primary" %>
     <% end %>
   </div>
