--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -14,7 +14,8 @@
        <div> <%= flat.housing_type %> </div>
        <div> <%= flat.max_ppl %> </div>
        <div> <%= flat.price_per_night %> </div>
-       <div> <%= cl_image_tag flat.photo %> </div>
+       <div class="card-img-top"><%= cl_image_tag flat.photo, height: 100, width: 100, crop: :fill %></div>
+       <!-- <div> <%= cl_image_tag flat.photo %> </div> -->
       </div>
     <% end %>
   </div>
