--- a/app/views/dashboards/profile.html.erb
+++ b/app/views/dashboards/profile.html.erb
@@ -1,2 +1,13 @@
-TEST
-<%= current_user.email %>
+<div class="container">
+  <div style="text-align: right"><%= link_to 'Edit', edit_user_registration_path %></div>
+  <div>
+    <%= current_user.photo %>
+  </div>
+
+  <div>
+    Email address: <%= current_user.email %>
+  </div>
+  <div>
+    User name: <%= current_user.username %>
+  </div>
+</div>
