--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,10 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+                <%= f.input :description %>
+
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
   </div>
 
   <div class="form-actions">
