done with edit profile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -73,6 +73,7 @@
 /* size of logo in the  navbar when logged in */
 #navbarDropdown {
   width: 50px;
+  // border-radius: 50%;
   position: relative;
   bottom: 4px;
 }
