--- a/app/views/dashboards/profile.html.erb
+++ b/app/views/dashboards/profile.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div style="text-align: right"><%= link_to 'Edit', edit_user_registration_path %></div>
   <div>
-    <%= current_user.photo %>
+    <%= cl_image_tag current_user.photo %>
   </div>
 
   <div>
@@ -9,5 +9,8 @@
   </div>
   <div>
     User name: <%= current_user.username %>
+  </div>
+  <div>
+    Description: <%= current_user.description %>
   </div>
 </div>
