done with edit profile and set up of mytrip myflats

--- a/app/views/dashboards/profile.html.erb
+++ b/app/views/dashboards/profile.html.erb
@@ -14,3 +14,6 @@
     Description: <%= current_user.description %>
   </div>
 </div>
+
+<div><%= link_to 'My Trips', mytrips_path %></div>
+<div><%= link_to 'My Flats', myflats_path %></div>
