--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
               <%= link_to "My trips", mytrips_path, class: "nav-link menu-links" %>
             </li>
             <li>
-              <%= link_to "My flats", "#", class: "nav-link menu-links" %>
+              <%= link_to "My flats", myflats_path, class: "nav-link menu-links" %>
             </li>
            <!--  <li>
               <%= link_to "Bookings", "#", class: "nav-link menu-links" %>
