--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -13,7 +13,7 @@
     <div class="row"><%= cl_image_tag @flat.photo, height: 300, width: 300, crop: :fill %></div>
 
    <div class="row"><%= link_to "Back to the research", session.delete(:return_to) %></div>
-   <div class="row"><%= link_to "edit", edit_flat_path(@flat) %></div>
+<!--    <div class="row"><%= link_to "edit", edit_flat_path(@flat) %></div> -->
 
 
   </div>
