--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,15 @@
 // Specific CSS for your home-page
+#container-all {
+background-image: url(./../../assets/bg1.jpg);
+height: 100vh;
+margin: 0;
+padding-top: 12%;
+background-repeat: no-repeat;
+background-size: cover;
+padding-right: 45%;
+}
 
-.container {
+#container-home {
   width: 440px;
   height: 480px;
   background-color: white;
@@ -8,15 +17,16 @@
   border-color: #676767;
   border-style: solid;
   position: relative;
-  margin-top: 5%;
-  margin-left: 12%;
+  border-radius: 4px;
+  padding: 16px;
 
-  padding: 15px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 
-  box-shadow: 4px 10px 12px #999;
+  opacity: 0.91;
+  // box-shadow: 4px 10px 12px #999;
 }
 
-label {
+label[for="location"], label[for="checkin"], label[for="checkout"] {
     font-size: 24px;
     font-style: normal;
     font-weight: normal;
@@ -24,9 +34,41 @@ label {
     margin-top: 22px;
 }
 
-h2, .h2 {
+input[name="search[checkin]"], input[name="search[checkout]"] {
+  text-align: right;
+  background-color: transparent;
+  width: 170px;
+}
+
+#home-h2 {
   font-size: 40px;
   font-style: normal;
   font-weight: bold;
-  padding-bottom: 2px;
+  padding-bottom: 8px;
 }
+
+#book-button {
+  margin-top: 48px;
+  width: 100%;
+  border: 1px;
+  background-color: #eb6909;
+  opacity: 0.9;
+  height: 48px;
+  font-weight: bold;
+  border-radius: 4px;
+}
+
+#div-dates {
+  display: flex;
+  justify-content: space-between;
+}
+
+#end_date, #start_date {
+  text-align: center;
+  display: none;
+  border: 1px;
+  border-style: solid;
+  border-color: #CACACA;
+  border-radius: 4px;
+}
+
