--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -12,14 +12,30 @@
         </div>
       <% end %>
     </div>
+    <div style="width: 33%">
+
+      <form action="/search" method="get">
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+        <div id="div-where">
+          <!-- <label for="location"> </label> -->
+          <div class="d-flex">
+            <input type="text" name="search[location]" id="location" placeholder="Anywhere" style="display: block;">
+            <input type="submit" value="Search">
+          </div>
+        </div>
+      </form>
 
       <div
-      id="map"
-      style="width: 33%;
-      height: 600px;
-      margin: 10px;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-    ></div>
+        id="map"
+        style="width: 100%;
+        height: 600px;
+        margin: 10px;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      ></div>
+  </div>
+
 
   </div>
+
+<button id="book-button" hidden>XXX</button>
