design fixed, cards not done

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 // Specific CSS for your home-page
-#container-all {
+#container-home-all {
 background-image: url(./../../assets/bg1.jpg);
 height: 100vh;
 margin: 0;
