--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <!-- <%= link_to "Go to Index", flats_path %> -->
-<div id="container-all">
+<div id="container-home-all">
   <div class="container" id="container-home">
     <h2 id="home-h2">Book unique places to stay.</h2>
     <div class="new_form">
