--- a/app/assets/stylesheets/components/_application.scss
+++ b/app/assets/stylesheets/components/_application.scss
@@ -4,6 +4,8 @@ body {
   width: 100%;
 }
 
-header {
-  margin: 0 auto;
+// class is applied in <div> on every displayed page
+.navbar-spacing {
+  padding-top: 80px;
+
 }
