--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -1,25 +1,32 @@
 
-  <div class="d-flex">
-    <div class="cards">
-      <% @flats.each do |flat|%>
-        <div class="card d-flex flex-column">
-          <div> <%= link_to flat.title, flat_path(flat)  %></div>
-         <div> <%= flat.description %> </div>
-         <div> <%= flat.housing_type %> </div>
-         <div> <%= flat.max_ppl %> </div>
-         <div> <%= flat.price_per_night %> </div>
-         <div class="card-img-top"><%= cl_image_tag flat.photo, height: 100, width: 100, crop: :fill %></div>
-        </div>
-      <% end %>
+
+
+<!-- contains the box with cards and map -->
+<div class="d-flex navbar-spacing">
+ <!-- Box with all the cards -->
+
+ <div class="cards" id="card-trip box-with-all-cards">
+  <% @flats.each do |flat|%>
+  <div class="card">
+    <div class="card-img-top">
+      <%= cl_image_tag flat.photo, class: "flat-picture" %>
     </div>
-
-      <div
-      id="map"
-      style="width: 33%;
-      height: 600px;
-      margin: 10px;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-    ></div>
-
+    <div class="card d-flex flex-column">
+      <div> <%= link_to flat.title, flat_path(flat)  %></div>
+      <div> <%= flat.description %> </div>
+      <div> <%= flat.housing_type %> </div>
+      <div> <%= flat.max_ppl %> </div>
+      <div> <%= flat.price_per_night %></div>
+    </div>
   </div>
+  <% end %>
+</div>
+
+
+
+<div id="map"
+data-markers="<%= @markers.to_json %>"
+data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
+</div>
+
