done with css on minor pages

--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :address %>
         <%= f.input :photo %>
         <%= f.input :photo_cache, as: :hidden %>
-        <%= f.submit "Add a Flat", class: "btn btn-primary" %>
+        <%= f.submit "Add a Flat", class: "btn", id: "new-flat-button" %>
     <% end %>
   </div>
 </div>
