--- a/app/views/dashboards/profile.html.erb
+++ b/app/views/dashboards/profile.html.erb
@@ -1,19 +1,22 @@
-<div class="container">
-  <div style="text-align: right"><%= link_to 'Edit', edit_user_registration_path %></div>
-  <div>
-    <%= cl_image_tag current_user.photo %>
-  </div>
-
-  <div>
-    Email address: <%= current_user.email %>
-  </div>
-  <div>
-    User name: <%= current_user.username %>
-  </div>
-  <div>
-    Description: <%= current_user.description %>
+<div id="container-home-all">
+  <div class="container">
+    <div id="profile-div">
+      <div style="text-align: right"><%= link_to '<i class="far fa-edit"></i>'.html_safe, edit_user_registration_path, id: "edit-button" %></div>
+      <div>
+        <%= cl_image_tag current_user.photo %>
+      </div>
+      </br>
+      <div class="d-flex title-div">
+        <p class="profile-titles">Email address:&nbsp; </p> <p class="profile-info"> <%= current_user.email %></p>
+      </div>
+      <div class="d-flex">
+        <p class="profile-titles">User name:&nbsp; </p> <p class="profile-info"> <%= current_user.username %></p>
+      </div>
+      <div class="d-flex">
+        <p class="profile-titles">Description:&nbsp; </p> <p class="profile-info"> <%= current_user.description %></p>
+      </div>
+        <div><%= link_to 'My Trips', mytrips_path, id: "edit-button" %></div>
+        <div><%= link_to 'My Flats', myflats_path, id: "edit-button" %></div>
+    </div>
   </div>
 </div>
-
-<div><%= link_to 'My Trips', mytrips_path %></div>
-<div><%= link_to 'My Flats', myflats_path %></div>
