--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :address %>
         <%= f.input :photo %>
         <%= f.input :photo_cache, as: :hidden %>
-        <%= f.submit "Flat edited", class: "btn btn-primary" %>
+        <%= f.submit "Flat edited", class: "btn", id: "new-flat-button" %>
     <% end %>
   </div>
 </div>
