--- a/app/views/flats/search.html.erb
+++ b/app/views/flats/search.html.erb
@@ -1,46 +1,51 @@
-
-
+<div class="search-background-image">
+<div class="spacer-on-top"></div>
 <!-- contains the box with cards and map -->
-<div class="d-flex navbar-spacing">
- <!-- Box with all the cards -->
+<div id="search-div-search-and-map">
 
- <div class="cards" id="card-trip box-with-all-cards">
-  <% @flats.each do |flat|%>
-  <div class="card">
-    <div class="card-img-top">
-      <%= cl_image_tag flat.photo, class: "flat-picture" %>
-    </div>
-    <div class="card d-flex flex-column">
-      <div> <%= link_to flat.title, flat_path(flat)  %></div>
-      <div> <%= flat.description %> </div>
-      <div> <%= flat.housing_type %> </div>
-      <div> <%= flat.max_ppl %> </div>
-      <div> <%= flat.price_per_night %></div>
-    </div>
+
+ <!-- Box with all the cards -->
+  <div class="cards" id="card-trip box-with-all-cards">
+    <% @flats.each do |flat|%>
+      <div class="search-card">
+        <div class="card-img-top">
+          <%= cl_image_tag flat.photo, class: "flat-picture" %>
+        </div>
+        <div id="search-card-info">
+          <div> <h3> <%= link_to flat.title, flat_path(flat)  %></div></h3>
+          <div> <%= flat.housing_type %> </div>
+          <div> <%= flat.max_ppl %> </div>
+          <div> <%= flat.price_per_night %></div>
+        </div>
+      </div>
+    <% end %>
   </div>
-  <% end %>
+
+ <!-- Box with map and search bar -->
+  <div class="map-and-search-form">
+    <div class="search-form">
+      <form action="/search" method="get">
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+        <div id="div-where">
+          <!-- <label for="location"> </label> -->
+          <div class="d-flex">
+            <input type="text" name="search[location]" id="location" placeholder="Anywhere" style="display: block;">
+            <input type="submit" value="Search">
+          </div>
+        </div>
+      </form>
+    </div>
+    <div id="map"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+  </div>
+
+</div>
+
 </div>
 
 
-<div> 
-  <div class="search-form">
-    <form action="/search" method="get">
-          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-          <div id="div-where">
-            <!-- <label for="location"> </label> -->
-            <div class="d-flex">
-              <input type="text" name="search[location]" id="location" placeholder="Anywhere" style="display: block;">
-              <input type="submit" value="Search">
-            </div>
-          </div>
-        </form>
-  </div>
-  <div id="map"
 
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
- </div>
-  </div>
+
 
 <button id="book-button" hidden>XXX</button>
