--- a/app/assets/stylesheets/components/_application.scss
+++ b/app/assets/stylesheets/components/_application.scss
@@ -6,6 +6,6 @@ body {
 
 // class is applied in <div> on every displayed page
 .navbar-spacing {
-  padding-top: 80px;
-
+  padding-top: 100px;
+  width: 100%;
 }
