--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 #container-home-all {
-background-image: url(./../../assets/bg1.jpg);
+background-image: url(https://res.cloudinary.com/dykmcht73/image/upload/v1559312230/bg1_zazubr.jpg);
 height: 100vh;
 margin: 0;
 padding-top: 12%;
