--- a/app/assets/stylesheets/components/_myflats.scss
+++ b/app/assets/stylesheets/components/_myflats.scss
@@ -40,7 +40,7 @@
 //   justify-content: space-between;
 // }
 
-#edit-button{
+#flat-edit-button{
  text-decoration: none;
  color: #989898;
  font-weight: bold;
@@ -49,7 +49,7 @@
  right: 10px;
 }
 
-#edit-button:hover{
+#flat-edit-button:hover{
  color: #eb6909;
 }
 
@@ -59,4 +59,46 @@
 
 #imgg {
   margin-top: 48px;
+}
+
+#trashh {
+  text-align: right;
+  position: absolute;
+  text-decoration: none;
+  color: #989898;
+  font-weight: bold;
+  position: relative;
+  top: 10px;
+  right: 10px;
+}
+
+#trashh:hover{
+ color: #eb6909;
+}
+
+#btnnn:hover {
+  opacity: 0.5;
+}
+
+#titree {
+  font-family: "Raleway", "Helvetica", "sans-serif";
+  font-weight: 500;
+  line-height: 1.2;
+  color: black;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #444444;
+}
+
+#titree:hover {
+  opacity: 0.7;
+  text-decoration: none;
 }
