--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -26,7 +26,7 @@
 
 .show-card {
   width: 600px;
-  height: 450px;
+  height: auto;
   background-color: white;
   border: 1px;
   border-color: #676767;
